feat(backend): support invites
